--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.3",
     "google-map-react": "^1.1.2",
+    "google-maps-react": "^2.0.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.4.1",
