--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "client": "react-scripts start",
     "server": "nodemon --watch server server/server.js",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "nodemon": "^1.17.2"
+    "jest": "^24.1.0",
+    "nodemon": "^1.17.2",
+    "supertest": "^3.4.2"
   },
   "browserslist": [
     ">0.2%",
